# spedas_mcp

./: .gitignore  ANATOMY.md  README.md  pyproject.toml  server.json
.agents/plugins/spedas-codex/: .mcp.json  README.md
.agents/plugins/spedas-codex/.codex-plugin/: plugin.json
.agents/plugins/spedas-codex/skills/particle-distribution-recipes/: SKILL.md
.agents/plugins/spedas-codex/skills/spedas-heritage-vocabulary/: SKILL.md
.agents/plugins/spedas-codex/skills/spedas-skills-index/: SKILL.md
.agents/plugins/spedas-codex/skills/spedas-workflow/: SKILL.md
.github/workflows/: ci.yml
docs/: maintainer_note.md  public_api_strategy.md
docs/examples/: agent_kit_integration_workflow.md  agent_workflow.md  cluster_geotail_themis_magnetotail_multispacecraft.md  juno_pds_spice_workflow.md  mms_magnetopause_workflow.md  psp_perihelion_solar_wind.md  solar_wind_event_presets.md  stereo_icme_multispacecraft.md  stereo_psp_solo_multispacecraft_insitu.md
plugins/: README.md  spedas-agent-kit-compatibility.json
plugins/spedas-claude/: .mcp.json  README.md
plugins/spedas-claude/.claude-plugin/: plugin.json
plugins/spedas-claude/commands/: analyze.md  cdaweb.md  overview.md  pds.md  spice.md
plugins/spedas-claude/skills/apply-rotation-matrix/: SKILL.md
plugins/spedas-claude/skills/coordinate-frame-tour/: SKILL.md
plugins/spedas-claude/skills/dual-spacecraft-timing/: SKILL.md
plugins/spedas-claude/skills/erg-arase-radiation-belt-waves/: SKILL.md
plugins/spedas-claude/skills/field-line-footpoint/: SKILL.md
plugins/spedas-claude/skills/mms-basic-workflows/: SKILL.md
plugins/spedas-claude/skills/model-lmn-boundary/: SKILL.md
plugins/spedas-claude/skills/multi-spacecraft-gradients/: SKILL.md
plugins/spedas-claude/skills/neutral-sheet-distance/: SKILL.md
plugins/spedas-claude/skills/omni-kyoto-noaa-smoke-workflows/: SKILL.md
plugins/spedas-claude/skills/overview-geomagnetic-indices/: SKILL.md
plugins/spedas-claude/skills/particle-velocity-slice/: SKILL.md
plugins/spedas-claude/skills/pitch-angle-distribution/: SKILL.md
plugins/spedas-claude/skills/power-spectral-density/: SKILL.md
plugins/spedas-claude/skills/psp-solar-wind-switchbacks/: SKILL.md
plugins/spedas-claude/skills/pytplot-plotting-options/: SKILL.md
plugins/spedas-claude/skills/solar-wind-icme-storm/: SKILL.md
plugins/spedas-claude/skills/spedas-agent-kit-anatomy/: SKILL.md
plugins/spedas-claude/skills/spedas-mcp-anatomy/: SKILL.md
plugins/spedas-claude/skills/spedas-skills-index/: SKILL.md
plugins/spedas-claude/skills/spedas-workflow/: SKILL.md
plugins/spedas-claude/skills/spice-conjunction-finder/: SKILL.md
plugins/spedas-claude/skills/timeseries-cleaning/: SKILL.md
plugins/spedas-claude/skills/tplot-data-lifecycle/: SKILL.md
scripts/: _smoke_runtime.py  export_packaged_skills.py  smoke_analysis_bundle.py  smoke_analysis_imports.py  smoke_mcp_list_tools.py  smoke_mcp_resources.py  validate_plugin_packages.py
src/spedas_agent_kit/: ANATOMY.md  __init__.py  __main__.py  optional_backends.py  server.py  workflows.py
src/spedas_agent_kit/analysis/: ANATOMY.md  __init__.py  coords.py  fieldmodels.py  particles.py  plotting.py  spectral.py
src/spedas_agent_kit/backends/: ANATOMY.md
src/spedas_agent_kit/backends/cdaweb/: NOTICE.md  __init__.py  cache.py  catalog.py  config.py  fetch.py  metadata.py  prompts.py  validation.py
src/spedas_agent_kit/backends/cdaweb/scripts/: build_catalog.py  build_metadata.py
src/spedas_agent_kit/backends/pds/: LICENSE  NOTICE.md  __init__.py  cache.py  catalog.py  config.py  fetch.py  http.py  label_parser.py  metadata.py  prompts.py  validation.py
src/spedas_agent_kit/backends/pds/scripts/: build_catalog.py  build_metadata.py  validate_schema.py
src/spedas_agent_kit/backends/spice/: LICENSE  NOTICE.md  __init__.py  ephemeris.py  frames.py  kernel_manager.py
src/spedas_agent_kit/backends/spice/manifests/: cassini.json  lunar_prospector.json  magellan.json  mro.json
src/spedas_agent_kit/datasources/: ANATOMY.md  __init__.py  hapi.py
src/spedas_agent_kit/resources/: __init__.py  event_presets.py  provenance.py
src/spedas_agent_kit/resources/presets/: solar_wind_event_presets.json
src/spedas_agent_kit/resources/schemas/: reproduction_provenance.schema.json
src/spedas_agent_kit/resources/skills/: README.md
src/spedas_agent_kit/resources/skills/boundary-minimum-variance/: SKILL.md
src/spedas_agent_kit/resources/skills/hodogram/: SKILL.md
src/spedas_agent_kit/resources/skills/magnetopause-lmn-analysis/: SKILL.md
src/spedas_agent_kit/resources/skills/multi-spacecraft-gradients/: SKILL.md
src/spedas_agent_kit/resources/skills/overview-geomagnetic-indices/: SKILL.md
src/spedas_agent_kit/resources/skills/paper-reproduction/: SKILL.md
src/spedas_agent_kit/resources/skills/pitch-angle-distribution/: SKILL.md
src/spedas_agent_kit/resources/skills/psp-solar-wind-switchbacks/: SKILL.md
src/spedas_agent_kit/resources/skills/psp-solo-heliophysics-workflows/: SKILL.md
src/spedas_agent_kit/resources/skills/pyspedas-load-planning/: SKILL.md
src/spedas_agent_kit/resources/skills/spedas-workflow/: SKILL.md
src/spedas_mcp/: ANATOMY.md  __init__.py  server.py  workflows.py
src/spedas_mcp/analysis/: ANATOMY.md  __init__.py  coords.py  fieldmodels.py  particles.py  plotting.py  spectral.py
src/spedas_mcp/backends/: ANATOMY.md
src/spedas_mcp/backends/cdaweb/: __init__.py  cache.py  catalog.py  config.py  fetch.py  http.py  metadata.py  prompts.py  validation.py
src/spedas_mcp/backends/spice/: NOTICE.md  __init__.py  ephemeris.py  frames.py  kernel_manager.py  missions.py
src/spedas_mcp/datasources/: __init__.py  fdsn.py  hapi.py
tests/: test_agent_kit_integration_workflow_docs.py  test_analysis_coords.py  test_analysis_fieldmodels.py  test_analysis_particles.py  test_analysis_plotting.py  test_analysis_spectral.py  test_config.py  test_datasources_fdsn.py  test_datasources_hapi.py  test_event_presets.py  test_export_packaged_skills.py  test_plugin_skills.py  test_provenance.py  test_resources.py  test_server.py
(+106 files in other folders)
