[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spedas-agent-kit"
version = "0.1.0"
description = "Unified SPEDAS-oriented MCP server for CDAWeb, PDS PPI, and SPICE workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Zesen Huang" },
]
keywords = ["spedas", "heliophysics", "cdaweb", "pds", "spice", "mcp", "space-physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "spiceypy>=6.0.0,<8.1.1; python_version == '3.10'",
    "spiceypy>=6.0.0; python_version >= '3.11'",
    "cdflib>=1.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.28",
    "mcp>=1.26.0,<2",

]

[project.optional-dependencies]
mcp = ["mcp>=1.26.0,<2"]
# Optional pyspedas-backed analysis layer (coordinate transforms, spectral/field/
# particle analysis, and PNG rendering). Not part of the base install; analysis
# tools import their backends lazily and return a clear "install
# spedas-agent-kit[analysis]" error when this extra is absent. matplotlib and
# PyWavelets are declared explicitly because render_tplot (#20) and
# wavelet_transform (#15) import them directly rather than relying on transitive
# pyspedas dependencies.
analysis = ["pyspedas>=2.0", "matplotlib>=3.5", "PyWavelets>=1.4"]
# Optional HAPI data-source backend (issue #21). browse_hapi_catalog /
# fetch_hapi_data reach any HAPI-compliant server through hapiclient; it is
# imported lazily and the tools return a clear "install spedas-agent-kit[hapi]" error
# when absent. hapiclient is lightweight and kept separate from the heavier
# analysis/pyspedas extra so HAPI access does not require all of pyspedas.
hapi = ["hapiclient>=0.2.5"]
# Optional FDSN/MTH5 magnetotelluric backend (issue #22). browse_fdsn_datasets /
# fetch_fdsn_data wrap pyspedas.mth5, which needs mth5 + obspy. These are heavy,
# ground-magnetometer-specific dependencies, so they are an opt-in extra rather
# than part of the base or analysis installs; the tools import them lazily and
# return a clear "install spedas-agent-kit[fdsn]" error when absent.
fdsn = ["pyspedas>=2.0", "mth5>=0.4.0", "obspy>=1.4"]
dev = [
    "pytest>=7.0",
    "mcp>=1.26.0,<2",
]

[project.urls]
Homepage = "https://github.com/spedas/spedas_agent_kit"
Repository = "https://github.com/spedas/spedas_agent_kit"
Issues = "https://github.com/spedas/spedas_agent_kit/issues"

[project.scripts]
spedas-agent-kit = "spedas_agent_kit:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spedas_agent_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
